--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=PT+Sans:wght@700&display=swap');
 
-*{
+
+:root {
+    --cor-secundaria: #7cba3b;
+    --cor-principal: #0d4276; 
+    --cor-background-um: #FFFFFF; 
+    --cor-bacground-dois: rgb(238, 238, 238); 
+    --cor-texto: #000000;
+    --texto-titulo: 'Noto Sans', sans-serif;
+    --texto-outros: 'Source Sans Pro', sans-serif;
+}
+
+/* Reset CSS */
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-align: center;
-    font-family: 'Noto Sans', sans-serif;
-}
-
-body{
-    background: linear-gradient(120deg,#E5D9B6, #e6d49f);
-}
-
-header, nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo, .navDiv{
-    padding: 1rem 2rem;
-    
-}
-
-#btn1, #btn2{
-    padding: .4rem;
-    cursor: pointer;
-      
-}
-
-a{
+    list-style: none;
     text-decoration: none;
-    background-color: transparent;
+    color: inherit;
+    line-height: 1.5;
 }
 
-img{
-    background-color: transparent;
-    padding: .7rem;
+/* Padronizandos fonts */
+
+h1, h2, h3, h4, h5{
+    font-family: var(--texto-titulo)
 }
 
-#comoFunciona{
-   display: none;
-   position: fixed;
-   top: 10%;
-   right: 13%;
-   height: auto;
-   width: 25%;
-   padding: .8rem;
-   background-color: #A4BE7B;
-   border-radius: 15px;
-   border: 2px solid  rgba(24, 128, 56, .8);
-   box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
-    
+p{
+    font-family: var(--texto-outros)
 }
 
-#contato{
-    display: none;
-    position: fixed;
-    top: 10%;
-    right: 1%;
-    height: auto;
+button {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    outline: none;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+}
+
+#title{
     width: auto;
-    background-color: #A4BE7B;
-    border-radius: 15px;
-    border: 2px solid  rgba(24, 128, 56, .8);
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
-     
- }
-
-
-
-.container{
-    height: 100vh;
+    text-align: center;
+    overflow-x: hidden;
     
 }
 
-#titulo{
-    padding: 6%;
-
+main{
+    height: 80vh;
+    overflow-x: hidden;
 }
 
-.resultado{
+.results{
     height: auto;
     width: 60%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    background: linear-gradient(120deg,#a4be7b93, #A4BE7B);
     align-items: center;
     justify-content: center;
     justify-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 15px;
-    border: 2px solid  rgba(24, 128, 56, .8);
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, .5);
+    margin: 4rem auto;
+
 }
 
-.numero{
+.number{
     display: flex;
     height: 70px;
     width: 70px;
     align-items: center;
     justify-content: center;
-    background-color: rgba(24, 128, 56, .8);
     font-size: 1.8rem;
     margin: 10px;
-    color: #E5D9B6;
-    font-family:'PT Sans', sans-serif;
-    border-radius: 50%;
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, .5);
+    
+}
+
+#btn-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    font-size: 1.1rem;
+
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
   
 
@@ -117,18 +101,5 @@ img{
         height: auto;
         padding: 2%;
     }
-
-    #comoFunciona{
-        display: none;
-        position: fixed;
-        top: 15%;
-        right: 20%;
-        height: auto;
-        width: 60%;
-    }
-    #titulo{
-        padding: 6%;
-        margin-top: 40%;
     
-    }
 }
